--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "scripts": {
     "generate": "zenstack generate && prisma db push",
-    "build": "next build",
+    "build": "npm run generate && next build",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "update": "npm i @zenstackhq/runtime@latest @zenstackhq/next@latest && npm i -D zenstack@latest"
+    "update": "npm i --save-exact @zenstackhq/runtime@latest @zenstackhq/next@latest @zenstackhq/react@latest && npm i -D --save-exact zenstack@latest"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
+    "@clerk/nextjs": "^4.16.1",
     "@prisma/client": "^4.5.0",
-    "@zenstackhq/next": "^1.0.0-alpha.28",
-    "@zenstackhq/react": "^1.0.0-alpha.28",
-    "@zenstackhq/runtime": "^1.0.0-alpha.28",
+    "@zenstackhq/next": "1.0.0-alpha.101",
+    "@zenstackhq/react": "1.0.0-alpha.101",
+    "@zenstackhq/runtime": "1.0.0-alpha.101",
     "next": "13.0.2",
-    "next-auth": "^4.18.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.1.3",
     "zod": "^3.18.0"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "prisma": "^4.5.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4",
-    "zenstack": "^1.0.0-alpha.28"
+    "zenstack": "1.0.0-alpha.101"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.3"
