--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@clerk/nextjs": "^5.0.2",
     "@prisma/client": "5.12.0",
-    "@zenstackhq/runtime": "^1.12.4",
-    "@zenstackhq/server": "^1.12.4",
-    "@zenstackhq/swr": "^1.12.4",
+    "@zenstackhq/runtime": "2.0.0",
+    "@zenstackhq/server": "2.0.0",
+    "@zenstackhq/swr": "2.0.0",
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,7 +38,7 @@
     "prisma": "5.12.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4",
-    "zenstack": "^1.12.4"
+    "zenstack": "2.0.0"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.3"
