--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "up": "npm i --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest @zenstackhq/swr@latest && npm i -D --save-exact zenstack@latest"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.2",
-    "@prisma/client": "5.12.0",
-    "@zenstackhq/runtime": "2.0.0",
-    "@zenstackhq/server": "2.0.0",
-    "@zenstackhq/swr": "2.0.0",
+    "@clerk/nextjs": "^5.1.4",
+    "@prisma/client": "5.13.0",
+    "@zenstackhq/runtime": "^2.1.2",
+    "@zenstackhq/server": "^2.1.2",
+    "@zenstackhq/swr": "^2.1.2",
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,10 +35,10 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "5.12.0",
+    "prisma": "5.13.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4",
-    "zenstack": "2.0.0"
+    "zenstack": "^2.1.2"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.3"
