--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start",
-    "up": "npm i --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest @zenstackhq/swr@latest && npm i -D --save-exact zenstack@latest"
+    "up": "npm i --save-exact @zenstackhq/runtime@latest @zenstackhq/server@latest @zenstackhq/tanstack-query@latest && npm i -D --save-exact zenstack@latest",
+    "up-preview": "npm i --save-exact --registry https://preview.registry.zenstack.dev @zenstackhq/runtime@latest @zenstackhq/server@latest @zenstackhq/tanstack-query@latest && npm i -D --save-exact --registry https://preview.registry.zenstack.dev zenstack@latest"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.4",
-    "@prisma/client": "5.13.0",
-    "@zenstackhq/runtime": "^2.1.2",
-    "@zenstackhq/server": "^2.1.2",
-    "@zenstackhq/swr": "^2.1.2",
+    "@clerk/nextjs": "^6.4.0",
+    "@prisma/client": "^5.22.0",
+    "@tanstack/react-query": "^5.60.5",
+    "@zenstackhq/runtime": "2.9.0",
+    "@zenstackhq/server": "2.9.0",
+    "@zenstackhq/tanstack-query": "2.9.0",
     "next": "^14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,8 +27,8 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
     "@typescript-eslint/parser": "^5.33.0",
     "autoprefixer": "^10.4.7",
@@ -35,10 +37,10 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "5.13.0",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4",
-    "zenstack": "^2.1.2"
+    "typescript": "^5.6.3",
+    "zenstack": "2.9.0"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.3"
